Tweak processor to use rewrite visitor rather than compiler visitor